Alignmnet Fix

--- a/src/styles/subscription.module.css
+++ b/src/styles/subscription.module.css
@@ -1,8 +1,8 @@
 .subscriptionContainer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, 0);
   width: 100%;
   text-align: center;
   padding: 2rem 1rem;
